k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-loadbalancer
  annotations:
    cloud.google.com/load-balancer-type: "External"
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
